# PAG

./: LICENSE  README.md
Java/javaCode/: .project  README  add_port_to_nodes.py  averageBdw.txt  launch_privacy.sh  launch_privacy_from_to.sh  launch_privacy_g5k.sh  nodes_and_ports.txt  util.sh
Java/javaCode/scripts/: 1_avg_jitter_per_node.py  2_avg_download_bandwidth.py  2_avg_upload_bandwidth.py  4_cdf_bandwidth.py  add_port_to_nodes.py  killall.sh  nodes_and_ports.txt
ORPR/libparameters-1.0.0/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in  libtool
ORPR/libparameters-1.0.0/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
ORPR/libparameters-1.0.0/include/: Makefile  Makefile.am  Makefile.in
ORPR/libparameters-1.0.0/include/peerreview/tools/: parameters.h
ORPR/libparameters-1.0.0/src/: Makefile  Makefile.am  Makefile.in  parameters.cc
ORPR/libparameters-1.0.0/src/.deps/: parameters.Plo
ORPR/libpeerreview-1.0.9-light/: LICENSE  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.in  libtool  rsa_onionrouting_private_1024.key
ORPR/libpeerreview-1.0.9-light/.deps/: Cryptographer.Plo  audit.Plo  authpush.Plo  authstore.Plo  challenge.Plo  commitment.Plo  dumphistory.Po  evidence.Plo  evtool.Plo  history.Plo  infostore.Plo  misbehavior.Plo  peerreview.Plo  simpleprng.Plo  statement.Plo  tools.Plo  verifier.Plo
ORPR/libpeerreview-1.0.9-light/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
ORPR/libpeerreview-1.0.9-light/include/: Makefile  Makefile.am  Makefile.in  peerreview.h
ORPR/libpeerreview-1.0.9-light/include/peerreview/: Cryptographer.h  config.h  config.h.in  entrytypes.h  history.h  identity.h  stamp-h1  tools.h  transport.h  vrf.h
ORPR/libpeerreview-1.0.9-light/src/: Cryptographer.cc  audit.cc  authpush.cc  authstore.cc  challenge.cc  commitment.cc  evidence.cc  evtool.cc  history.cc  infostore.cc  misbehavior.cc  peerreview.cc  simpleprng.cc  statement.cc  tools.cc  verifier.cc
ORPR/libpeerreview-1.0.9-light/src/tools/: dumphistory.cc
ORPR/libpeerreview-1.0.9-light/src/vrf/: extinfo.cc  randomwrapper.cc  verifiableprng.cc  vrf.cc
ORPR/onionrouting-1.0.0/: Makefile  Makefile.am  Makefile.in  README  accOnionRouting.txt  accOnionRouting_100.txt  avg_authenticators.sh  check.sh  clean.sh  cleanup.sh  compute_avg_authenticators_nodes.sh  compute_logSize.sh  compute_stat.sh  compute_stat_wpr.sh  compute_stat_wpr.sh~  config.status  configure  configure.in  do_exp.sh  global.sh  launch-wit-exp.sh  lost_rate_onion.sh  makecerts.sh  makecerts_old.sh  makedirs.sh  onionrouting-10-rational.param  onionrouting-100-rational.param  onionrouting-1000-rational.param  onionrouting-20-rational.param  onionrouting-200-rational.param  perf_attack.sh  rsa_priv_1024.key  rsa_pub_1024.key  scal.sh
ORPR/onionrouting-1.0.0/autom4te.cache/: output.0  output.1  requests  traces.0
ORPR/onionrouting-1.0.0/ca/: cacert.pem  cakey.pem  node0001_cert.pem  node0001_key.pem  node0002_cert.pem  node0002_key.pem  node0003_cert.pem  node0003_key.pem  node0004_cert.pem  node0004_key.pem  node0005_cert.pem  node0005_key.pem  node0006_cert.pem  node0006_key.pem  node0007_cert.pem  node0007_key.pem  node0008_cert.pem  node0008_key.pem  node0009_cert.pem  node0009_key.pem  node0010_cert.pem  node0010_key.pem  node0011_cert.pem  node0011_key.pem  node0012_cert.pem  node0012_key.pem  node0013_cert.pem  node0013_key.pem  node0014_cert.pem  node0014_key.pem  node0015_cert.pem  node0015_key.pem  node0016_cert.pem  node0016_key.pem  node0017_cert.pem  node0017_key.pem  node0018_cert.pem  node0018_key.pem  node0019_cert.pem  node0019_key.pem  (+1962 more)
ORPR/onionrouting-1.0.0/include/: onionrouting.h  parameters.h
ORPR/onionrouting-1.0.0/scripts/: makedirs-esm.sh
ORPR/onionrouting-1.0.0/src/: Cryptographer.cc  main-direct-inet.cc  main-direct-sim.cc  main-inet.cc  main-sim.cc  makeexp.cc  onionrouting-sender.cc  onionrouting.cc
ORPR/onionrouting-1.0.0/src/.deps/: Cryptographer.Po  main-direct-inet.Po  main-direct-sim.Po  main-inet.Po  main-sim.Po  makeexp.Po  multicast-sender.Po  multicast.Po  onionrouting-sender.Po  onionrouting.Po
ORPR/onionrouting-1.0.0/test/: a.out  test.cc  test.cc~
ORPR/transports-1.0.2-OR/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in  libtool  makeca
ORPR/transports-1.0.2-OR/.deps/: makeca.Po
ORPR/transports-1.0.2-OR/autom4te.cache/: output.0  requests  traces.0
ORPR/transports-1.0.2-OR/include/: Makefile  Makefile.am  Makefile.in
ORPR/transports-1.0.2-OR/include/peerreview/transport/id/: dummy.h  esignxp.h  selfsign.h  simple.h  x509.h
ORPR/transports-1.0.2-OR/include/peerreview/transport/net/: inet.h  nfs_udp.h  simulator.h
ORPR/transports-1.0.2-OR/src/: Makefile  Makefile.am  Makefile.in  inet.lo  libnfstransport.la  libsimtransport.la  libx509.la  nfs_udp.lo  readcert  selfsign.lo  simpleid.lo  simpletransport.lo  simulator.lo
ORPR/transports-1.0.2-OR/src/.deps/: inet.Plo  nfs_udp.Plo  readcert.Po  selfsign.Plo  simpleid.Plo  simpletransport.Plo  simulator.Plo  x509.Plo
ORPR/transports-1.0.2-OR/src/.libs/: libdummyxp.la  libdummyxp.lai  libdummyxp.so.0.0.0  libinettransport.la  libinettransport.lai  libnfstransport.lai  libnfstransport.so.0  libselfsign.la  libselfsign.lai  libselfsign.so.0.0.0  libsimtransport.lai  libx509.lai
ORPR/transports-1.0.2-OR/src/id/: esignxp.cc  selfsign.cc  simpleid.cc  simpletransport.cc  x509.cc
ORPR/transports-1.0.2-OR/src/net/: inet.cc  nfs_udp.cc  simulator.cc
ORPR/transports-1.0.2-OR/src/tools/: esign-keygen.cc  esign-signcert.cc  makeca.cc  readcert.cc
Omnetpp/Fprivacycrypto/: .cproject  .project
Omnetpp/Fprivacycrypto/simulations/: CBR_advanced.ini  CBR_advanced_Network_100.ned  CBR_advanced_Network_1000.ned  CBR_advanced_Network_10000.ned  CBR_advanced_Network_20.ned  CBR_advanced_Network_250.ned  CBR_advanced_Network_4000.ned  automatic_run.sh  automatic_run_audio.sh  (+3 more)
ProVerif/: PAG_ProVerif.pv
RAC/RRB/: RRBproto.cc.d
RAC/RRB_cmd/: RRBproto.ini  RRBprotoNet.ned  run.sh
(+214 files in other folders)
