## Process this file with automake to produce Makefile.in

SUBDIRS = src include
DISTCLEANFILES= config.log config.status
MAINTAINERCLEANFILES= aclocal.m4 depcomp config.guess config.sub ltmain.sh mkinstalldirs stamp-h.in stamp-h1 install-sh missing config.h.in configure Makefile.in compile $(PACKAGE)-$(VERSION).tar.gz

