dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/parameters.cc)
AM_INIT_AUTOMAKE(libparameters, 1.0.0)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AM_PROG_AS
AC_PROG_RANLIB
AC_PROG_LIBTOOL

dnl Remove generated Makefiles wthen doing maintainer-clean.
MAINTAINERCLEANFILES="$MAINTAINERCLEANFILES Makefile.in"
AC_SUBST(MAINTAINERCLEANFILES)

dnl Always include top level includes.
CPPFLAGS="$CPPFLAGS -I\$(top_srcdir)/include/"
AC_SUBST(CPPFLAGS)

dnl Modified files.
AC_OUTPUT(Makefile src/Makefile include/Makefile)
