dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/peerreview.cc)

AM_INIT_AUTOMAKE(libpeerreview, 1.0.9)
AM_CONFIG_HEADER(include/peerreview/config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AM_PROG_AS
AC_PROG_RANLIB
AC_PROG_LIBTOOL

dnl Enabling VRFs
AC_ARG_ENABLE(vrf,
[  --enable-vrf            add support for VRFs],
[case "${enableval}" in 
    yes) vrf=true ;;
    no) vrf=false ;;
    *) AC_MSG_ERROR(bad value ${enableval} for --enable-vrf) ;;
esac],[vrf=false])

AM_CONDITIONAL(WITH_VRF, test x$vrf = xtrue)

dnl Remove generated Makefiles wthen doing maintainer-clean.
MAINTAINERCLEANFILES="$MAINTAINERCLEANFILES Makefile.in"
AC_SUBST(MAINTAINERCLEANFILES)

dnl Always include top level includes.
CPPFLAGS="$CPPFLAGS -I\$(top_srcdir)/include"
AC_SUBST(CPPFLAGS)

dnl Modified files.
AC_OUTPUT(Makefile include/Makefile)
