dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/main-sim.cc)
AM_INIT_AUTOMAKE(onionrouting, 1.0.0)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_LN_S
AC_LANG_CPLUSPLUS
AC_CHECK_LIB(crypto,main,,AC_MSG_ERROR(Cannot find libcrypto))
AC_CHECK_LIB(peerreview,main,,AC_MSG_ERROR(Cannot find libpeerreview),-lcrypto)
AC_CHECK_LIB(parameters,main,,AC_MSG_ERROR(Cannot find libparameters),-lcrypto)
AC_CHECK_LIB(simtransport,main,,AC_MSG_ERROR(Cannot find libsimtransport))
dnl AC_CHECK_LIB(x509,main,,AC_MSG_ERROR(Cannot find libx509))

dnl Remove generated Makefiles wthen doing maintainer-clean.
MAINTAINERCLEANFILES="$MAINTAINERCLEANFILES Makefile.in"
AC_SUBST(MAINTAINERCLEANFILES)

dnl Always include top level includes.
CPPFLAGS="$CPPFLAGS -I\$(top_srcdir)/include"
AC_SUBST(CPPFLAGS)

dnl Modified files.
AC_OUTPUT(Makefile)

